<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#3e83f2"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.nurli.mysunshine.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
            android:background="#1e427a"
        android:orientation="vertical"
        android:padding="@dimen/padding_header">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/its_sunday"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/weather_icon"/>

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/lightRain"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_17_derajat"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="@dimen/padding_header"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="#1e427a"
        android:orientation="vertical"
        android:padding="@dimen/padding_header">

        <TextView
            style="@android:style/TextAppearance.DeviceDefault.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/monday"
            android:textColor="@android:color/white"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_gravity="center_horizontal"
                    android:src="@mipmap/wsymbol_0001_sunny"/>

                <TextView
                    style="@android:style/TextAppearance.DeviceDefault.Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/clear"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_16"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>
